--- a/profile.css
+++ b/profile.css
@@ -1,10 +1,11 @@
 #ProfilePicture{
-    right: 50px;
     width: 200px;
     border-radius: 50%;
+    margin-top: 30px;
+    margin-left: 30px;
 }
 #card{
-    nav-down: 100px;
     width: 700px;
     margin: auto;
+    margin-top: 100px;
 }
