--- a/views/material.ejs
+++ b/views/material.ejs
@@ -7,28 +7,8 @@
   <title>Materiales</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #171335 !important; margin-bottom: 40px;">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#" style="color: #e8ffce !important;">MATERIAL</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <!-- Enlaces de navegación -->
-          <li class="nav-item"><a class="nav-link active" style="color: #e8ffce !important;" href="/areas">AREAS</a></li>
-          <li class="nav-item"><a class="nav-link active" style="color: #e8ffce !important;" href="/teachers">TEACHERS</a></li>
-          <li class="nav-item"><a class="nav-link active" style="color: #e8ffce !important;" href="/msg">MESSAGES</a></li>
-          <li class="nav-item"><a class="nav-link active" style="color: #e8ffce !important;" href="/foros">FORUMS</a></li>
-          <li class="nav-item"><a class="nav-link active" style="color: #e8ffce !important;" href="/material"><b>MATERIAL</b></a></li>
-          <li class="nav-item"><a class="nav-link active" style="color: #e8ffce !important;" href="/quizes">QUIZZES</a></li>
-        </ul>
-        <span class="navbar-text">
-          <a class="nav-link active" href="/perfil"><img src="/images/perf.png" height="30px"></a>
-        </span>
-      </div>
-    </div>
-  </nav>
+
+  <%- include("partials/navbar") -%>
 
   <div class="container container-90vh">
     <div class="row clearfix">
