--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,18 +1,16 @@
 <nav  class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #171335 !important;" >
     <div class="container-fluid">
-        <a class="navbar-brand" href="#" style="color: #e8ffce !important;">EduBridge</a>
+        <a class="navbar-brand" href="/index" style="color: #e8ffce !important;">EduBridge</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item"><a class="nav-link active"  style="color: #e8ffce !important;" href="areas"><b>AREAS</b></a></li>
-              <li class="nav-item"><a class="nav-link active"  style="color: #e8ffce !important;" href="teachers">TEACHERS</a></li>
-              <li class="nav-item"><a class="nav-link active"  style="color: #e8ffce !important;" href="messages">MESSAGES</a></li>
-              <li class="nav-item"><a class="nav-link active"  style="color: #e8ffce !important;" href="teachers">FORUMS</a></li>
-              <li class="nav-item"><a class="nav-link active"  style="color: #e8ffce !important;" href="material">MATERIAL</a></li>
-              <li class="nav-item"><a class="nav-link active"  style="color: #e8ffce !important;" href="quizes">QUIZZES</a></li>
-          
+              <li class="nav-item"><a class="nav-link active"  style="color: #e8ffce !important;" href="/areas"><b>AREAS</b></a></li>
+              <li class="nav-item"><a class="nav-link active"  style="color: #e8ffce !important;" href="/teachers">TEACHERS</a></li>
+              <li class="nav-item"><a class="nav-link active"  style="color: #e8ffce !important;" href="/teachers">FORUMS</a></li>
+              <li class="nav-item"><a class="nav-link active"  style="color: #e8ffce !important;" href="/material">MATERIAL</a></li>
+              <li class="nav-item"><a class="nav-link active"  style="color: #e8ffce !important;" href="/quizes">QUIZZES</a></li>
           </ul>
           <span class="navbar-text">
               <a class="nav-link active" href="perfil.html"><img src="./images/perf.png" height="30px"></a>
