--- a/views/material.ejs
+++ b/views/material.ejs
@@ -12,8 +12,8 @@
 
   <div class="container container-90vh">
     <div class="row clearfix">
-      <div class="col-lg-12">
-        <button class="text-success border-5 border-success text-bg-light btn btn-primary d-block d-md-none mb-3" id="toggleChatList">Mostrar Categorías</button>
+      <div class="col-lg-12 mas">
+        <button class="btn d-block d-md-none mb-3" id="toggleChatList">Mostrar Categorías</button>
 
         <div class="card chat-app">
           <div id="plist" class="people-list chatn">
