--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,15 +4,8 @@
     <title>EduBridge</title>
 </head>
 <body>
-    <nav  class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #171335 !important;" >
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#" style="color: #e8ffce !important;">HOME</a>
-              <span class="navbar-text">
-                  <a class="nav-link active" href="/perfil"><img src="./images/perf.png" height="30px"></a>
-              </span>
-            </div>
-          </div>
-        </nav>
+ 
+    <%- include("partials/navbar"); -%>
 
         <div class="container text-center">
             <div class="row">
