--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,20 +1,28 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary mb-3" style="background-color: #171335 !important;">
   <div class="container-fluid">
-      <a class="navbar-brand" href="/index" style="color: #e8ffce !important;"><%= pageName %></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link <%= (pageName == 'Areas') ? 'active' : '' %>" style="color: #e8ffce !important;" href="/areas">AREAS</a></li>
-            <li class="nav-item"><a class="nav-link <%= (pageName == 'Teachers') ? 'active' : '' %>" style="color: #e8ffce !important;" href="/teachers">TEACHERS</a></li>
-            <li class="nav-item"><a class="nav-link <%= (pageName == 'Foros') ? 'active' : '' %>" style="color: #e8ffce !important;" href="/foros">FORUMS</a></li>
-            <li class="nav-item"><a class="nav-link <%= (pageName == 'Material') ? 'active' : '' %>" style="color: #e8ffce !important;" href="/material">MATERIAL</a></li>
-            <li class="nav-item"><a class="nav-link <%= (pageName == 'Quizes') ? 'active' : '' %>" style="color: #e8ffce !important;" href="/quizes">QUIZZES</a></li>
-        </ul>
-          <span class="navbar-text">
-              <a class="nav-link active" href="/perfil"><img src="/images/perf.png" height="30px"></a>
-          </span>
-      </div>
+    <a class="navbar-brand" href="/index" style="color: #e8ffce !important;">
+      <%= pageName %>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+      aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item"><a class="nav-link <%= (pageName == 'Areas') ? 'active' : '' %>"
+            style="color: #e8ffce !important;" href="/areas">AREAS</a></li>
+        <li class="nav-item"><a class="nav-link <%= (pageName == 'Teachers') ? 'active' : '' %>"
+            style="color: #e8ffce !important;" href="/teachers">TEACHERS</a></li>
+        <li class="nav-item"><a class="nav-link <%= (pageName == 'Foros') ? 'active' : '' %>"
+            style="color: #e8ffce !important;" href="/foros">FORUMS</a></li>
+        <li class="nav-item"><a class="nav-link <%= (pageName == 'Material') ? 'active' : '' %>"
+            style="color: #e8ffce !important;" href="/material">MATERIAL</a></li>
+        <li class="nav-item"><a class="nav-link <%= (pageName == 'Quizes') ? 'active' : '' %>"
+            style="color: #e8ffce !important;" href="/quizes">QUIZZES</a></li>
+      </ul>
+      <span class="navbar-text">
+        <a class="nav-link active" href="/perfil"><img src="/images/perf.png" height="30px"></a>
+      </span>
+    </div>
   </div>
 </nav>
